fixed vertical alignment of add icons since previous commit

--- a/dev/scss/components/add/_add_mini.scss
+++ b/dev/scss/components/add/_add_mini.scss
@@ -3,7 +3,14 @@
  */
 @include get-location($type: horizontal, $region: mini) {
 
-  .escort-add {
+  .escort-item.escort-add {
+
+    .escort-icon {
+
+      i {
+        vertical-align: sub;
+      }
+    }
 
     > div {
       @include button-style($region: mini);
