--- a/dev/scss/utils/_mixins.scss
+++ b/dev/scss/utils/_mixins.scss
@@ -153,7 +153,7 @@
 
   @if $region == 'mini' {
     box-shadow: 0 2px 10px rgba(adjust-color($bg-color-mini, $saturation: 0%, $lightness: -8%), 0.25);
-    padding: 0 ($padding / 2);
+    padding: 0 $padding * 0.75;
     line-height: $base-size * 0.55 !important;
 
     &:hover {
